# My-Eduqual-Exam

./: Assistive devices.py  ML decoder.py  Neural acquisition.py  Neurofeedback training.py  Privacy security.py  README.md  Realtime pipeline.py  Requirements.txt  main.py  pyproject.toml
