[project]
name = "my-eduqual-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brainflow>=5.20.0",
    "cryptography>=46.0.4",
    "kafka>=1.3.5",
    "kafka-python>=2.3.0",
    "numpy>=2.2.6",
    "pylsl>=1.18.1",
    "pyopenbci>=0.13",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "serial>=0.0.97",
    "tensorflow>=2.20.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "xmltodict>=1.0.2",
]
